--- a/playground.ipynb
+++ b/playground.ipynb
@@ -10,12 +10,17 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3-final"
+   "version": "3.6.12-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3"
+   "display_name": "Python 3.6.12 64-bit ('baker': conda)",
+   "metadata": {
+    "interpreter": {
+     "hash": "cb66d0a7fa1e52b600a007793db377d76ee89267a16075eef8c0636718d0b101"
+    }
+   }
   }
  },
  "nbformat": 4,
@@ -23,10 +28,41 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pdfminer.high_level import extract_text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'彭长英、李应芝等与陈川等机动车交通事故责任纠\\n\\n纷一审民事判决书\\n\\n（2019）川 1423 民初 1607 号之一 机动车交通事故责任纠纷 一审 民事\\n\\n洪雅县人民法院 2019-12-23\\n\\n原告：彭长英，女，1976 年 7 月 513 出生，汉族，住四川省洪雅县。\\n\\n原告：李应芝，女，1942 年 1 月 15 日出生，汉族，住四川省洪雅县。\\n\\n原告：罗一帆，女，1999 年 1 月 4 日出生，汉族，住四川省洪雅县。\\n\\n三原告共同委托诉讼代理人：伍国洪，四川必应律师事务所律师\\n\\n被告：陈川，男，1970 年 11 月 28 日出生，汉族，住四川省洪雅县。\\n\\n委托诉讼代理人：祁明忠，四川恒初律师事务所律师（特别授权）。\\n\\n委托诉讼代理人：祝瑞，四川恒初律师事务所律师（一般授权）。\\n\\n被告：中国平安财产保险股份有限公司眉山中心支公司，住所地眉山市东坡区东\\n\\n坡大道东坡湖广场三期二幢一层。\\n\\n法定代表人：张晓虎。\\n\\n委托诉讼代理人：李政昊，北京盈科律师事务所律师\\n\\n被告：刘志英，女，汉族，1972 年 3 月 19 日出生，住四川省洪雅县。\\n\\n委托诉讼代理人：祁明忠，四川恒初律师事务所律师（特别授权）。\\n\\n委托诉讼代理人：祝瑞，四川恒初律师事务所律师（一般授权）。\\n\\n被告：四川省洪雅青衣江元明粉有限公司，住所地：洪雅县余坪镇福宝村。\\n\\n社会统一信用代码：9151142362114607X1\\n\\n法定代表人：余建兵，职务：总经理\\n\\n委托诉讼代理人：赵明月，四川川达律师事务所律师\\n\\n委托诉讼代理人：郭圆圆，四川川达律师事务所律师\\n\\n原告彭长英、李应芝、罗一帆诉被告陈川、中国平安财产保险股份有限公司眉山\\n\\n中心支公司、刘志英、四川省洪雅青衣江元明粉有限公司机动车交通事故责任纠纷一\\n\\n·1·\\n\\n\\x0c案，本院于 2019 年 11 月 6 日立案后，依法适用简易程序，公开开庭进行了审理。原\\n\\n告彭长英、李应芝、罗一帆及其委托诉讼代理人伍国洪，被告陈川、刘志英及其委托\\n\\n诉讼代理人祁明忠，被告中国平安财产保险股份有限公司眉山中心支公司委托诉讼代\\n\\n理人李政昊，被告四川省洪雅青衣江元明粉有限公司委托诉讼代理人赵明月、郭圆圆\\n\\n到庭参加了诉讼。本案现已审理终结。\\n\\n原告彭长英、李应芝、罗一帆向本院提出诉讼请求：\\n\\n事实与理由：2019 年 10 月 30 日晚上，陈川醉酒后驾驶川ＺXXXXX 小型普通小\\n\\n车从四川洪雅青衣江元明粉有限公司处罚沿省道 305 线往县城方向行驶，20 时 5 分，\\n\\n车行至 305 线洪雅段 278 公里＋200 米处与前方右侧路边行人罗志坡相撞，陈川在事\\n\\n故发生后未停车继续向前行驶与相对方向行驶来的由沈静所驾驶的川ＬXXXXX 号小型\\n\\n轿车相撞，造成罗志坡被受伤经拖救无效死亡，两车受损的交通事故。2019 年 11 月\\n\\n5 日洪雅县交通警察大队出具交通事故认定书，认定陈川承担全部责任，沈静、罗志\\n\\n坡无责任。事故发生后，经交警调解，被告方承担了安葬费 60000 元。陈川醉酒后驾\\n\\n驶的川ＺXXXXX 小型普通小车车主系陈川妻子刘志英，该车在中国平安财产保险股份\\n\\n有限公司眉山中心支公司购买了交强险和商业险。且陈川是在被告四川省洪雅青衣江\\n\\n元明粉有限公司安排的工作宴上醉酒后驾车发生事故。为此，诉至法院。\\n\\n被告陈川、刘志英辨称，死者系农村户口，应该按照农村户口赔偿死亡赔偿金和\\n\\n被抚养人生活费，精神抚慰金认可赔偿 40000 元，交通费认可 1000 元，误工费认可\\n\\n900 元，丧葬费为预付，要求一并处理。保险公司应当在商业险中赔偿。\\n\\n被告中国平安财产保险股份有限公司眉山中心支公司辩称，对事故发生和责任无\\n\\n异议，保险公司应该承担保险责任，不承担侵权责任，保险公司不应该在商业险中承\\n\\n担赔偿责任。\\n\\n被告四川省洪雅青衣江元明粉有限公司辩称，陈川驾车回家不是为了公务，案涉\\n\\n车辆也不是公司所有，公司不存在侵权责任，与损害行为不存在因果责任。陈川并没\\n\\n有被安排参加公司宴请，且宴请过程中，公司也尽到了提示管理义务，不存在过错。\\n\\n本院经审理认定事实如下：2019 年 10 月 30 日晚上，陈川醉酒后驾驶川Ｚ\\n\\n·2·\\n\\n\\x0cXXXXX 小型普通小车从四川洪雅青衣江元明粉有限公司处罚沿省道 305 线往县城方向\\n\\n行驶，20 时 5 分，车行至 305 线洪雅段 278 公里＋200 米处与前方右侧路边行人罗\\n\\n志坡相撞，陈川在事故发生后未停车继续向前行驶与相对方向行驶来的由沈静所驾驶\\n\\n的川ＬXXXXX 号小型轿车相撞，造成罗志坡受伤经抢救后死亡、两车受损的交通事\\n\\n故。2019 年 11 月 5 日洪雅县交通警察大队出具交通事故认定书，认定陈川承担全部\\n\\n责任，沈静、罗志坡无责任。事故发生后，经交警调解，被告方承担了安葬费 60000\\n\\n元。陈川醉酒后驾驶的川ＺXXXXX 小型普通小车车主系陈川妻子刘志英，该车在中国\\n\\n平安财产保险股份有限公司眉山中心支公司购买了交强险和商业险。且陈川是在被告\\n\\n四川省洪雅青衣江元明粉有限公司安排的工作宴上醉酒后驾车发生事故。2019 年 11\\n\\n月 1 日，陈川与原告彭长英、罗一帆、李应芝达成丧葬费赔偿协议，约定由陈川支付\\n\\n原告丧葬费 60000 元，超出法定标准部分 27641.5 元系陈川自愿补偿，不在其他赔偿\\n\\n金额中扣除。\\n\\n确认。\\n\\n另外，原告彭长英、李应芝、罗一帆于 2019 年 12 月 25 日向本院递交了撤回追\\n\\n加报告申请书,自愿申请撤回对被告四川省洪雅青衣江元明粉有限公司的诉讼,本院予以\\n\\n上述事实有原告提交的交通事故认定书、丧葬费协议、火化证、洪雅县自然资源\\n\\n局证明、洪雅县余坪镇福宝村村委会证明等以及原被告的庭上陈述予以证实。\\n\\n本院认为，公民的身体权、生命权受法律保护，任何公民、法人或其他组织因过\\n\\n错侵犯他人身体或生命权的，应当承担相应的民事责任。本案的主要争议焦点为：\\n\\n一、原告申请的死亡赔偿金和被抚养费生活费是否应该按城镇标准计算；二、被告中\\n\\n国平安财产保险股份有限公司眉山中心支公司是否应该在商业险中承担赔付责任。\\n\\n关于原告主张死者的死亡赔偿金和被抚养费生活费是否应该按城镇居民标准计\\n\\n算，原告提供了洪雅县自然资源局出具的证明、洪雅县余坪镇福宝村村委会出具的证\\n\\n明，证明死者为失地农民。还提供了 2018 年至 2019 年间死者在洪雅县家通装饰材料\\n\\n经营部、洪雅县智娃装饰材料经营部等购买油漆陆续为李国华、罗怀军等几十户房屋\\n\\n进行装修的证明材料，证明死者长期在城镇务工为生。本院认为，原告提供的证据能\\n\\n·3·\\n\\n\\x0c够证明其按照城镇标准计算死亡赔偿金及被抚养人生活费的观点。死者虽然系农村居\\n\\n民户口，但长期在城镇务工，主要收入来源于城镇。故其提出应当按照城镇居民标准\\n\\n计算死亡赔偿金和被扶养人生活费的主张，本院予以支持。\\n\\n关于被告中国平安财产保险股份有限公司眉山中心支公司是否应该在商业险中承\\n\\n担赔付责任。被告中国平安财产保险股份有限公司眉山中心支公司提供了刘志英签字\\n\\n确认的《中国平安财产保险股份有限公司机动车综合商业保险/机动车交通事故责任强\\n\\n制保险投保单》，其中投保人声明第二项载明：“&hellip;&hellip;贵公司已向本投保\\n\\n人详细介绍了该条款内容，特别就保险条款中免除保险人责任的条款内容和手写或打\\n\\n印版的特别约定作了明确说明，本投保人对免除保险人责任的条款的概念、内容及法\\n\\n律后果，均因保险人的明确说明已经完全理解，并同意投保。”根据《最高人民法院\\n\\n关于适用〈中华人民共和国保险法〉若干问题的解释(二)》第十条规定：保险人将法\\n\\n律、行政法规中的禁止性规定情形作为保险合同免责条款的免责事由，保险人对该条\\n\\n款作出提示后，投保人、被保险人或者受益人以保险人未履行明确说明义务为由主张\\n\\n该条款不生效的，人民法院不予支持。本案肇事车辆驾驶员饮酒后驾驶机动车的行\\n\\n为，违反了《中华人民共和国道路交通安全法》第二十二条饮酒后不得驾驶机动车之\\n\\n规定。饮酒后驾驶机动车系法律所禁止的行为，被告无需向投保人予以明确说明。从\\n\\n另一方面看，本案肇事人合法取得机动车车辆驾驶资格，就理应知晓饮酒发生交通事\\n\\n故后保险公司商业险免赔的社会常识，理应知晓酒驾免责的保险条款。从以上两个方\\n\\n面来看，在本案肇事车主已收到上述具有“投保人声明”内容的《中国平安财产保险\\n\\n股份有限公司机动车综合商业保险/机动车交通事故责任强制保险投保单》的基础上，\\n\\n在原、被告双方均认可保险合同成立并生效的前提下，刘志英的代理人认为中国平安\\n\\n财产保险股份有限公司眉山中心支公司没有就商业保险中酒驾免责的条款对其进行提\\n\\n示，以自己不知晓为由，认为该酒驾免责的条款对其不生效的主张是不能成立的。而\\n\\n且，饮酒后驾驶机动车属于道路交通安全法的禁止性规定，喝酒不开车已经成为一项\\n\\n社会公德和常识，禁止酒驾也是为了社会公共利益、维护交通秩序、保护驾驶人和他\\n\\n人的生命财产安全。禁止酒驾是社会广泛知晓的常识，如果保险公司对酒驾造成的损\\n\\n·4·\\n\\n\\x0c失进行了赔付，在社会上会造成不良的影响，助长酒后驾车的不良风气。《中华人民\\n\\n共和国保险法》第四条规定：“从事保险活动必须遵守法律、行政法规，尊重社会公\\n\\n德，不得损害社会公共利益”、第五条规定：“保险活动当事人行使权利、履行义务\\n\\n应当遵循诚实信用原则”。故综合以上不同角度，在保险公司已向投保人交付投保\\n\\n单，且投保单上投保人已经签收了包含“投保人声明”内容后，陈川饮酒驾驶该机动\\n\\n车造成的第三人损失在商业三者险内免除赔偿责任的免责已经生效。故被告中国平安\\n\\n财产保险股份有限公司眉山中心支公司可以对本案投保人允许的驾驶人饮酒驾驶机动\\n\\n车造成的第三人损失在商业三者险内免除赔偿责任。\\n\\n本次交通事故造成罗志坡死亡的损失，本院依据查明的事实及现行人身损害赔偿\\n\\n的相关规定，参照四川省 2018 年的相关统计数据，对原告的损失确认如下：\\n\\n丧葬费：根据丧葬费赔偿协议，被告陈川自愿放弃已经支付的超出法定部分，本\\n\\n院予以确认；\\n\\n死亡赔偿金：33216 元/年 x20 年=664320 元；\\n\\n被扶养人生活费：23484 元/年 x5 年&divide;3=39140 元。死者罗志坡，其母\\n\\n亲李应芝出生于 1942 年 1 月 15 日，共有 4 个子女，其中罗洪琼于罗志坡身故前已死\\n\\n亡。\\n\\n精神抚慰金：本院酌情认定为 40000 元；\\n\\n交通费：原告提供的飞机票，不属于死者近亲属范畴，依法不予认定，但是交通\\n\\n费的发生是必然的，对该项损失，酌情确定数额 1500 元予以支持\\n\\n误工费：根据本地经济水平，本院酌情认定为 900 元；\\n\\n以上费用共计为 745860，其中由中国平安财产保险股份有限公司眉山中心支公\\n\\n司在交强险范围内赔付 110000 元。\\n\\n综上，依据《中华人民共和国侵权责任法》第一条、第十六条、第二十二条、第\\n\\n四十八条，最高人民法院关于适用〈中华人民共和国保险法〉若干问题的解释(二)》第\\n\\n十条，《中华人民共和国保险法》第四条、第五条，《最高人民法院关于审理人身损\\n\\n害赔偿案件适用法律若干问题的解释》第二十八条、第二十九条、第三十条、第三十\\n\\n·5·\\n\\n\\x0c五条，《中华人民共和国道路交通安全法》第七十六条的规定,判决如下:\\n\\n一、由被告陈川、刘志英在本判决生效之日起 15 日内支付原告彭长英、李应\\n\\n芝、罗一帆赔偿款 635860 元。\\n\\n二、由被告中国平安财产保险股份有限公司眉山中心支公司在本判决生效之日起\\n\\n15 日内支付原告彭长英、李应芝、罗一帆赔偿款 110000 元。\\n\\n如果未按本判决指定的期间履行给付义务，应当依照《中华人民共和国民事诉讼\\n\\n法》第二百五十三条的规定，加倍支付迟延履行期间的债务利息。\\n\\n本案诉讼费减半收取为 5924 元、保全费 5000 元，由原告彭长英、李应芝、罗\\n\\n一帆承担 924 元，被告陈川、刘志英承担 10000 元。\\n\\n如不服本判决,可在判决书送达之日起十五日内,向本院递交上诉状,并按对方当事\\n\\n人的人数提出副本,上诉于四川省眉山市中级人民法院。\\n\\n审判员\\n\\n杨卫东\\n\\n二〇一九年十二月二十三日\\n\\n书记员\\n\\n成 语\\n\\n·6·\\n\\n\\x0c'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 7
+    }
+   ],
+   "source": [
+    "extract_text('data/raw/数据源-民事判决书20200330103838.pdf')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pdfminer."
+   ]
   }
  ]
 }
