feat: parse year

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -55,37 +55,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
-     "name": "stderr",
+     "name": "stdout",
      "text": [
-      "Paddle enabled successfully......\n",
-      "2 m\n",
-      ". w\n",
-      "住院 vn\n",
-      "伙食 n\n",
-      "补助费 n\n",
-      "参照 v\n",
-      "当地 s\n",
-      "国家机关 n\n",
-      "一般 a\n",
-      "工作 vn\n",
-      "人员 n\n",
-      "出差 v\n",
-      "标准 n\n",
-      "予以 v\n",
-      "确定 vn\n"
+      "<_sre.SRE_Match object; span=(3, 21), match='（2019）黑0521民初2092号'>\n"
      ]
     }
    ],
    "source": [
-    "def get_case_name(lines):\n",
-    "    for line in lines:\n",
-    "        line = line.strip('\\n')\n",
-    "        if"
+    "import re\n",
+    "for line in lines:\n",
+    "    matchObj = re.search('[（|()]\\d{4}[）|)].+号',line) \n",
+    "    if matchObj is not None:\n",
+    "        print(matchObj)"
    ]
   },
   {
