fix: bugfix & export all

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -55,23 +55,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
-     "name": "stdout",
+     "name": "stderr",
      "text": [
-      "<_sre.SRE_Match object; span=(3, 21), match='（2019）黑0521民初2092号'>\n"
+      "Paddle enabled successfully......\n",
+      "原告/n\n",
+      "朱淋，/PER\n",
+      "女，/n\n",
+      "1993年12月3日/TIME\n",
+      "出生/v\n",
+      "。/n\n",
+      "原告/n\n",
+      "：隋文江，男，/nr\n",
+      "1959年11月30日/TIME\n",
+      "出生/v\n",
+      "，/v\n",
+      "汉族/ORG\n",
+      "，住/v\n",
+      "集贤/v\n",
+      "被告/n\n",
+      "：/v\n",
+      "中国平安财产保险股份有限公司黑龙江分公司/ORG\n",
+      "，/v\n",
+      "住所/n\n",
+      "地/u\n",
+      "哈尔滨市/LOC\n",
+      "南岗区/LOC\n",
+      "赣水路21号/LOC\n",
+      "。/n\n"
      ]
     }
    ],
    "source": [
-    "import re\n",
-    "for line in lines:\n",
-    "    matchObj = re.search('[（|()]\\d{4}[）|)].+号',line) \n",
-    "    if matchObj is not None:\n",
-    "        print(matchObj)"
+    "import jieba\n",
+    "import jieba.posseg as pseg\n",
+    "\n",
+    "jieba.enable_paddle()\n",
+    "\n",
+    "seg_list = pseg.cut('原告朱淋，女，1993年12月3日出生。',use_paddle=True)\n",
+    "for seg in seg_list:\n",
+    "    print(seg)\n",
+    "\n",
+    "seg_list = pseg.cut('原告：隋文江，男，1959年11月30日出生，汉族，住集贤',use_paddle=True)\n",
+    "for seg in seg_list:\n",
+    "    print(seg)\n",
+    "\n",
+    "seg_list = pseg.cut('被告：中国平安财产保险股份有限公司黑龙江分公司，住所地哈尔滨市南岗区赣水路21号。',use_paddle=True)\n",
+    "for seg in seg_list:\n",
+    "    print(seg)\n"
    ]
   },
   {
