feat: support case_summary

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -111,6 +111,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from difflib import SequenceMatcher\n",
+    "\n",
+    "def similar(string: str, sub: str) -> float:\n",
+    "    sm = SequenceMatcher(None, string, sub)\n",
+    "    matchs = sm.get_matching_blocks()\n",
+    "    size = 0\n",
+    "    for match in matchs:\n",
+    "        size+=match.size\n",
+    "    return size/len(sub)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 8
+    }
+   ],
+   "source": [
+    "similar('2、关于隋文江按何种标准对待问题。','隋文江何种标准对待')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
