feat: support defendant & plaintiff

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -77,6 +77,10 @@
       "汉族/ORG\n",
       "，住/v\n",
       "集贤/v\n",
+      "王成，/PER\n",
+      "黑龙江方帷律师事务所/ORG\n",
+      "律师/n\n",
+      "。/v\n",
       "被告/n\n",
       "：/v\n",
       "中国平安财产保险股份有限公司黑龙江分公司/ORG\n",
@@ -101,6 +105,10 @@
     "    print(seg)\n",
     "\n",
     "seg_list = pseg.cut('原告：隋文江，男，1959年11月30日出生，汉族，住集贤',use_paddle=True)\n",
+    "for seg in seg_list:\n",
+    "    print(seg)\n",
+    "\n",
+    "seg_list = pseg.cut('王成，黑龙江方帷律师事务所律师。',use_paddle=True)\n",
     "for seg in seg_list:\n",
     "    print(seg)\n",
     "\n",
