hotfix: Prevent overmatch

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -63,34 +63,21 @@
      "name": "stderr",
      "text": [
       "Paddle enabled successfully......\n",
-      "原告/n\n",
-      "朱淋，/PER\n",
-      "女，/n\n",
-      "1993年12月3日/TIME\n",
-      "出生/v\n",
-      "。/n\n",
-      "原告/n\n",
-      "：隋文江，男，/nr\n",
-      "1959年11月30日/TIME\n",
-      "出生/v\n",
-      "，/v\n",
-      "汉族/ORG\n",
-      "，住/v\n",
-      "集贤/v\n",
-      "王成，/PER\n",
-      "黑龙江方帷律师事务所/ORG\n",
-      "律师/n\n",
-      "。/v\n",
-      "被告/n\n",
-      "：/v\n",
-      "中国平安财产保险股份有限公司黑龙江分公司/ORG\n",
+      "济宁绿源食品有限公司/ORG\n",
       "，/v\n",
       "住所/n\n",
       "地/u\n",
-      "哈尔滨市/LOC\n",
-      "南岗区/LOC\n",
-      "赣水路21号/LOC\n",
-      "。/n\n"
+      "：/v\n",
+      "济宁市/LOC\n",
+      "兖州区/LOC\n",
+      "颜店工业新城/LOC\n",
+      "嵫山路1号/LOC\n",
+      "，/v\n",
+      "统一/v\n",
+      "社会/n\n",
+      "信用/n\n",
+      "代码/n\n",
+      "：91370882730653476Q。/nr\n"
      ]
     }
    ],
@@ -100,19 +87,10 @@
     "\n",
     "jieba.enable_paddle()\n",
     "\n",
-    "seg_list = pseg.cut('原告朱淋，女，1993年12月3日出生。',use_paddle=True)\n",
+    "seg_list = pseg.cut('济宁绿源食品有限公司，住所地：济宁市兖州区颜店工业新城嵫山路1号，统一社会信用代码：91370882730653476Q。',use_paddle=True)\n",
     "for seg in seg_list:\n",
     "    print(seg)\n",
     "\n",
-    "seg_list = pseg.cut('原告：隋文江，男，1959年11月30日出生，汉族，住集贤',use_paddle=True)\n",
-    "for seg in seg_list:\n",
-    "    print(seg)\n",
-    "\n",
-    "seg_list = pseg.cut('王成，黑龙江方帷律师事务所律师。',use_paddle=True)\n",
-    "for seg in seg_list:\n",
-    "    print(seg)\n",
-    "\n",
-    "seg_list = pseg.cut('被告：中国平安财产保险股份有限公司黑龙江分公司，住所地哈尔滨市南岗区赣水路21号。',use_paddle=True)\n",
     "for seg in seg_list:\n",
     "    print(seg)\n"
    ]
