--- a/playground.ipynb
+++ b/playground.ipynb
@@ -10,17 +10,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.12-final"
+   "version": "3.6.12"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.6.12 64-bit ('baker': conda)",
-   "metadata": {
-    "interpreter": {
-     "hash": "cb66d0a7fa1e52b600a007793db377d76ee89267a16075eef8c0636718d0b101"
-    }
-   }
+   "name": "python3612jvsc74a57bd0e05219a823e6c9cd1193b45223c308a9baf7afef71dd82f7d8bfef323ea14977",
+   "display_name": "Python 3.6.12 64-bit ('baker': conda)"
   }
  },
  "nbformat": 4,
@@ -63,21 +58,12 @@
      "name": "stderr",
      "text": [
       "Paddle enabled successfully......\n",
-      "济宁绿源食品有限公司/ORG\n",
-      "，/v\n",
-      "住所/n\n",
-      "地/u\n",
-      "：/v\n",
-      "济宁市/LOC\n",
-      "兖州区/LOC\n",
-      "颜店工业新城/LOC\n",
-      "嵫山路1号/LOC\n",
-      "，/v\n",
-      "统一/v\n",
-      "社会/n\n",
-      "信用/n\n",
-      "代码/n\n",
-      "：91370882730653476Q。/nr\n"
+      "致使/v\n",
+      "李某/PER\n",
+      "、/v\n",
+      "曹某/PER\n",
+      "3/m\n",
+      "死亡/vn\n"
      ]
     }
    ],
@@ -87,7 +73,7 @@
     "\n",
     "jieba.enable_paddle()\n",
     "\n",
-    "seg_list = pseg.cut('济宁绿源食品有限公司，住所地：济宁市兖州区颜店工业新城嵫山路1号，统一社会信用代码：91370882730653476Q。',use_paddle=True)\n",
+    "seg_list = pseg.cut('致使李某、曹某3死亡',use_paddle=True)\n",
     "for seg in seg_list:\n",
     "    print(seg)\n",
     "\n",
